tests/paczka1/small_fuzzy/57173052.err
Error in line 1: ngT0 S653 65,2
Error in line 12: sd_It_MZT29 S965 28,5
Error in line 11: ngT0 S360 20,6
